<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_brouser"
            android:icon="@drawable/ic_menu_brouser"
            android:title="@string/menu_brouser" />
        <item
            android:id="@+id/nav_disney"
            android:icon="@drawable/ic_menu_disney"
            android:title="@string/menu_disney" />
        <item
            android:id="@+id/nav_compass"
            android:icon="@drawable/ic_menu_compass"
            android:title="@string/menu_compass" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_note"
            android:title="@string/menu_note" />
        <item
            android:id="@+id/nav_microphone"
            android:icon="@drawable/ic_menu_microphone"
            android:title="@string/menu_microphone" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_file"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_file" />
        <item
            android:id="@+id/nav_establishments"
            android:icon="@drawable/ic_menu_establishments"
            android:title="@string/menu_establishments" />
    </group>
</menu>