<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:id="@+id/icon_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="30dp"
            android:src="@drawable/mushu"
            android:contentDescription="@string/disney_descr_ic_user"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/disney_descr_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/disney_title_h1"
                android:textColor="#D9D9D9"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:background="@drawable/round_button"
                android:contentDescription="@string/disney_descr_btn_search"
                android:src="@android:drawable/ic_menu_search" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/nemo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/nemo"
                android:contentDescription="@string/disney_descr_nemo"/>

            <ImageView
                android:id="@+id/lion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/lion"
                android:contentDescription="@string/disney_descr_lion"/>

            <ImageView
                android:id="@+id/mulan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/mulan"
                android:contentDescription="@string/disney_descr_mulan"/>
        </LinearLayout>

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disney_title_h2"
            android:textColor="#D9D9D9"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/lady"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/lady"
                android:contentDescription="@string/disney_descr_lady"/>

            <ImageView
                android:id="@+id/hercules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/hercules"
                android:contentDescription="@string/disney_descr_hercules"/>

            <ImageView
                android:id="@+id/aladin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/aladin"
                android:contentDescription="@string/disney_descr_aladin"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>